--- a/net-mgmt/networkmgr/Makefile
+++ b/net-mgmt/networkmgr/Makefile
@@ -16,14 +16,14 @@ LICENSE=	BSD
 USE_GITHUB=	yes
 GH_ACCOUNT=	GhostBSD
 GH_PROJECT=	${PORTNAME}
-GH_TAGNAME=	0.1
-GH_COMMIT= 31c9742
+GH_TAGNAME=	${PORTVERSION}
+GH_COMMIT= 2105641
 USE_PYTHON=	yes
 USE_PYDISTUTILS=	yes
 #NO_BUILD=	yes
 NO_STAGE=	yes
 #PLIST_DIRS=	bin/pywarrior
-WRKSRC=		${WRKDIR}/${GH_ACCOUNT}-${PORTNAME}-${GH_COMMIT}
+#WRKSRC=		${WRKDIR}/${PORTNAME}-${PORTVERSION}
 
 		
 .include <bsd.port.mk>
