changed License from BSD to creative Common

--- a/x11-themes/ghostbsd-icons/Makefile
+++ b/x11-themes/ghostbsd-icons/Makefile
@@ -11,7 +11,11 @@ CATEGORIES=	x11-themes
 
 MAINTAINER=	angelescuo@yahoo.com
 COMMENT= GhostBSD icons for mate flavour
-LICENSE = BSD
+LICENSE=	CCBYSA
+LICENSE_NAME=	CREATIVE COMMON
+LICENSE_PERMS= dist-mirror pkg-mirror auto-accept
+LICENSE_FILE=	${FILESDIR}/LICENSE
+LICENSE_DISTFILES=	${DISTNAME}${EXTRACT_SUFX}
 
 USE_GITHUB=	yes
 GH_ACCOUNT=	GhostBSD
