added zenity as depend for ghostbsd irc

--- a/irc/ghostbsd-irc/Makefile
+++ b/irc/ghostbsd-irc/Makefile
@@ -21,7 +21,8 @@ GH_COMMIT=	8475406
 
 NO_BUILD=	yes
 RUN_DEPENDS= ssft.sh:${PORTSDIR}/devel/ssft\
-             dpkg:${PORTSDIR}/archivers/dpkg
+             dpkg:${PORTSDIR}/archivers/dpkg\
+             zenity:${PORTSDIR}/x11/zenity
 
 do-install:
 
