Revert "added zenity as depend for ghostbsd irc"
This reverts commit 99f827fd5fd75d82ecc79d01738f2f42ac4d598b.

--- a/irc/ghostbsd-irc/Makefile
+++ b/irc/ghostbsd-irc/Makefile
@@ -21,8 +21,7 @@ GH_COMMIT=	8475406
 
 NO_BUILD=	yes
 RUN_DEPENDS= ssft.sh:${PORTSDIR}/devel/ssft\
-             dpkg:${PORTSDIR}/archivers/dpkg\
-             zenity:${PORTSDIR}/x11/zenity
+             dpkg:${PORTSDIR}/archivers/dpkg
 
 do-install:
 
