--- a/sysutils/ghostbsd-grub2-settings/Makefile
+++ b/sysutils/ghostbsd-grub2-settings/Makefile
@@ -1,12 +1,12 @@
 # New ports collection makefile for: GhostBSD settings for grub2
-# Date created:        11 may 2015
+# Date created:        5 jun 2015
 # Whom:                angelescuo@yahoo.com
 #
 # $FreeBSD$
 #
 
 PORTNAME= 	ghostbsd-grub2-settings
-PORTVERSION=	1.0
+PORTVERSION=	1.1
 CATEGORIES=	x11
 
 MAINTAINER=	angelescuo@yahoo.com
@@ -17,9 +17,11 @@ USE_GITHUB=	yes
 GH_ACCOUNT=	GhostBSD
 GH_PROJECT=	${PORTNAME}
 GH_TAGNAME=	${PORTVERSION}
-GH_COMMIT=	f565c08
+GH_COMMIT=	63181f9
 
 NO_BUILD=	yes
+
+RUN_DEPENDS=	grub-mkconfig:${PORTSDIR}/sysutils/grub2
 
 do-install:
 	@${MKDIR} -p ${STAGEDIR}/boot/grub/themes/ghostbsd
