--- a/sysutils/ghostbsd-grub2-settings/Makefile
+++ b/sysutils/ghostbsd-grub2-settings/Makefile
@@ -1,13 +1,13 @@
 # New ports collection makefile for: GhostBSD settings for grub2
-# Date created:        5 jun 2015
+# Date created:        6 jun 2015
 # Whom:                angelescuo@yahoo.com
 #
 # $FreeBSD$
 #
 
 PORTNAME= 	ghostbsd-grub2-settings
-PORTVERSION=	1.1
-CATEGORIES=	x11
+PORTVERSION=	1.2
+CATEGORIES=	sysutils
 
 MAINTAINER=	angelescuo@yahoo.com
 COMMENT=	GhostBSD grub2 settings
@@ -17,7 +17,7 @@ USE_GITHUB=	yes
 GH_ACCOUNT=	GhostBSD
 GH_PROJECT=	${PORTNAME}
 GH_TAGNAME=	${PORTVERSION}
-GH_COMMIT=	63181f9
+GH_COMMIT=	507676d
 
 NO_BUILD=	yes
 
