--- a/x11-themes/ghostbsd-wallpapers-new/Makefile
+++ b/x11-themes/ghostbsd-wallpapers-new/Makefile
@@ -10,8 +10,9 @@ PORTVERSION=	1.0
 CATEGORIES=	x11-themes
 
 MAINTAINER=	angelescuo@yahoo.com
-COMMENT= GhostBSD art for DE's
-LICENSE = BSD
+COMMENT=	GhostBSD art for DE's
+
+LICENSE=	BSD
 
 USE_GITHUB=	yes
 GH_ACCOUNT=	GhostBSD
@@ -19,7 +20,6 @@ GH_ACCOUNT=	GhostBSD
 NO_BUILD=	yes
 
 do-install:
-	@${MKDIR} -p ${STAGEDIR}${PREFIX}/share 
-	@${CP} -PR ${WRKSRC}/share/* ${STAGEDIR}${PREFIX}/share
-
+	${MKDIR} ${STAGEDIR}${PREFIX}/share 
+	${CP} -PR ${WRKSRC}/share/* ${STAGEDIR}${PREFIX}/share
 .include <bsd.port.mk>
