--- a/sysutils/ghostbsd-grub2-settings/Makefile
+++ b/sysutils/ghostbsd-grub2-settings/Makefile
@@ -5,24 +5,24 @@
 # $FreeBSD$
 #
 
-PORTNAME= 	ghostbsd-grub2-settings
+PORTNAME=	ghostbsd-grub2-settings
 PORTVERSION=	1.12
 CATEGORIES=	sysutils
 
 MAINTAINER=	angelescuo@yahoo.com
 COMMENT=	GhostBSD grub2 settings
-LICENSE =	BSD
+
+LICENSE=	BSD
 
 USE_GITHUB=	yes
 GH_ACCOUNT=	GhostBSD
 
-
 NO_BUILD=	yes
 
-RUN_DEPENDS=	grub-mkconfig:${PORTSDIR}/sysutils/grub2-pcbsd
+RUN_DEPENDS=	grub-mkconfig:sysutils/grub2-pcbsd
 
 do-install:
-	@${MKDIR} -p ${STAGEDIR}/boot/grub/themes/ghostbsd
-	@${MKDIR} -p ${STAGEDIR}/usr/local/etc/default
-	@${CP} -R   ${WRKSRC}/* ${STAGEDIR}/
+	${MKDIR} ${STAGEDIR}/boot/grub/themes/ghostbsd
+	${MKDIR} ${STAGEDIR}/usr/local/etc/default
+	${CP} -R  ${WRKSRC}/* ${STAGEDIR}/
 .include <bsd.port.mk>
