--- a/x11-themes/ghostbsd-wallpapers/Makefile
+++ b/x11-themes/ghostbsd-wallpapers/Makefile
@@ -10,8 +10,9 @@ PORTVERSION=	1.3
 CATEGORIES=	x11-themes
 
 MAINTAINER=	angelescuo@yahoo.com
-COMMENT= GhostBSD art for mate flavour
-LICENSE = BSD
+COMMENT=	GhostBSD art for mate flavour
+
+LICENSE=	BSD
 
 USE_GITHUB=	yes
 GH_ACCOUNT=	GhostBSD
@@ -19,7 +20,6 @@ GH_ACCOUNT=	GhostBSD
 NO_BUILD=	yes
 
 do-install:
-	@${MKDIR} -p ${STAGEDIR}${PREFIX}/share/backgrounds/ghostbsd 
-	@${CP} -PR ${WRKSRC}/*.jpg ${STAGEDIR}${PREFIX}/share/backgrounds/ghostbsd
-
+	${MKDIR} ${STAGEDIR}${PREFIX}/share/backgrounds/ghostbsd 
+	${CP} -PR ${WRKSRC}/*.jpg ${STAGEDIR}${PREFIX}/share/backgrounds/ghostbsd
 .include <bsd.port.mk>
