--- a/x11/cinnamon-installed-settings/Makefile
+++ b/x11/cinnamon-installed-settings/Makefile
@@ -5,27 +5,28 @@
 # $FreeBSD$
 #
 
-PORTNAME= 	cinnamon-installed-settings
+PORTNAME=	cinnamon-installed-settings
 PORTVERSION=	1.3
 CATEGORIES=	x11
 
 MAINTAINER=	angelescuo@yahoo.com
 COMMENT=	GhostBSD cinnamon settings in installed mode
-LICENSE =	BSD
+
+LICENSE=	BSD
 
 USE_GITHUB=	yes
 GH_ACCOUNT=	GhostBSD
 
-RUN_DEPENDS=	glib-compile-schemas:${PORTSDIR}/devel/glib20 \
-		 dpkg:${PORTSDIR}/archivers/dpkg
+RUN_DEPENDS=	glib-compile-schemas:devel/glib20 \
+		dpkg:archivers/dpkg
 
 NO_BUILD=	yes
 
 do-install:
-	@${MKDIR} -p ${STAGEDIR}/${PREFIX}/share/ghostbsd/cinnamon-installed-settings
-	@${CP} -R   ${WRKSRC}/ghostbsd/* ${STAGEDIR}/${PREFIX}/share/ghostbsd/cinnamon-installed-settings
-	@${MKDIR} -p ${STAGEDIR}/${PREFIX}/share/cinnamon-background-properties
-	@${CP} ${WRKSRC}/cinnamon-background-properties/ghostbsd.xml ${STAGEDIR}/${PREFIX}/share/cinnamon-background-properties
-	@${MKDIR} -p ${STAGEDIR}/${PREFIX}/share/glib-2.0/schemas
-	@${CP} -R   ${WRKSRC}/schemas/* ${STAGEDIR}/${PREFIX}/share/glib-2.0/schemas
+	${MKDIR} ${STAGEDIR}/${PREFIX}/share/ghostbsd/cinnamon-installed-settings
+	${CP} -R   ${WRKSRC}/ghostbsd/* ${STAGEDIR}/${PREFIX}/share/ghostbsd/cinnamon-installed-settings
+	${MKDIR} ${STAGEDIR}/${PREFIX}/share/cinnamon-background-properties
+	${CP} ${WRKSRC}/cinnamon-background-properties/ghostbsd.xml ${STAGEDIR}/${PREFIX}/share/cinnamon-background-properties
+	${MKDIR} ${STAGEDIR}/${PREFIX}/share/glib-2.0/schemas
+	${CP} -R   ${WRKSRC}/schemas/* ${STAGEDIR}/${PREFIX}/share/glib-2.0/schemas
 .include <bsd.port.mk>
