--- a/x11/cinnamon-live-settings/Makefile
+++ b/x11/cinnamon-live-settings/Makefile
@@ -5,22 +5,23 @@
 # $FreeBSD$
 #
 
-PORTNAME= 	cinnamon-live-settings
+PORTNAME=	cinnamon-live-settings
 PORTVERSION=	1.0
 CATEGORIES=	x11
 
 MAINTAINER=	angelescuo@yahoo.com
 COMMENT=	GhostBSD cinnamon settings in live mode
-LICENSE =	BSD
+
+LICENSE=	BSD
 
 USE_GITHUB=	yes
 GH_ACCOUNT=	GhostBSD
 
-RUN_DEPENDS=	glib-compile-schemas:${PORTSDIR}/devel/glib20
+RUN_DEPENDS=	glib-compile-schemas:devel/glib20
 
 NO_BUILD=	yes
 
 do-install:
-	@${MKDIR} -p ${STAGEDIR}/${PREFIX}/share/glib-2.0/schemas
-	@${CP} -R   ${WRKSRC}/schemas/* ${STAGEDIR}/${PREFIX}/share/glib-2.0/schemas
+	${MKDIR} ${STAGEDIR}/${PREFIX}/share/glib-2.0/schemas
+	${CP} -R   ${WRKSRC}/schemas/* ${STAGEDIR}/${PREFIX}/share/glib-2.0/schemas
 .include <bsd.port.mk>
