added xinitrc to gbsd slim theme

--- a/x11/ghostbsd-slim-theme/Makefile
+++ b/x11/ghostbsd-slim-theme/Makefile
@@ -6,7 +6,7 @@
 #
 
 PORTNAME=	ghostbsd-slim-theme
-PORTVERSION=	1.0
+PORTVERSION=	1.1
 CATEGORIES=	x11
 
 MAINTAINER=	angelescuo@yahoo.com
@@ -25,4 +25,6 @@ NO_BUILD=	yes
 do-install:
 	${MKDIR} ${STAGEDIR}/${PREFIX}/share/slim/themes/ghostbsd
 	${CP} -R ${WRKSRC}/gbsd/* ${STAGEDIR}/${PREFIX}/share/slim/themes/ghostbsd/
+	${MKDIR} ${STAGEDIR}/${PREFIX}/share/ghostbsd/slim/etc
+	${CP} -R ${WRKSRC}/etc/* ${STAGEDIR}/${PREFIX}/share/ghostbsd/slim/etc/
 .include <bsd.port.mk>
