update wallpaper gbi and mate install setting

--- a/x11-themes/ghostbsd-wallpapers/Makefile
+++ b/x11-themes/ghostbsd-wallpapers/Makefile
@@ -6,11 +6,11 @@
 #
 
 PORTNAME=	ghostbsd-wallpapers
-PORTVERSION=	1.3
+PORTVERSION=	11.0
 CATEGORIES=	x11-themes
 
 MAINTAINER=	angelescuo@yahoo.com
-COMMENT=	GhostBSD art for mate flavour
+COMMENT=	GhostBSD wallpaper art
 
 LICENSE=	BSD
 
@@ -20,6 +20,10 @@ GH_ACCOUNT=	GhostBSD
 NO_BUILD=	yes
 
 do-install:
-	${MKDIR} ${STAGEDIR}${PREFIX}/share/backgrounds/ghostbsd 
+	${MKDIR} ${STAGEDIR}${PREFIX}/share/backgrounds/ghostbsd
 	${CP} -PR ${WRKSRC}/*.jpg ${STAGEDIR}${PREFIX}/share/backgrounds/ghostbsd
+	${MKDIR} ${STAGEDIR}${PREFIX}/share/mate-background-properties
+	${CP} -PR ${WRKSRC}/ghostbsd.xml ${STAGEDIR}${PREFIX}/share/mate-background-properties/ghostbsd.xml
+	${MKDIR} ${STAGEDIR}${PREFIX}/share/gnome-background-properties
+	${CP} -PR ${WRKSRC}/ghostbsd.xml ${STAGEDIR}${PREFIX}/share/gnome-background-properties/ghostbsd.xml
 .include <bsd.port.mk>
