Adding NetworkMgr 1.9 with doas support

--- a/net-mgmt/networkmgr/Makefile
+++ b/net-mgmt/networkmgr/Makefile
@@ -1,22 +1,24 @@
-# Created by:	Eric Turgeon ericturgeon@ghostbsd.org
+# Created by:	Eric Turgeon ericturgeon.bsd@gmail.org
 # Date created:	November 11 2013
 
 
 PORTNAME=	networkmgr
-PORTVERSION=	1.8
-PORTREVISION=	0
+PORTVERSION=	1.9
+
 CATEGORIES=	net-mgmt
 MASTER_SITES=	https://github.com/GhostBSD/${PORTNAME}/archive/
 
-MAINTAINER=	ericturgeon@ghostbsd.org
-COMMENT=	GTK network manager.
+MAINTAINER=	ericturgeon.bsd@gmail.com
+COMMENT=	FreeBSD/GhostBSD network conection manager.
 
 LICENSE=	BSD
 
 USE_GITHUB=	yes
 GH_ACCOUNT=	GhostBSD
 
+RUN_DEPENDS=	doas:security/doas
 USES = python:2
+
 USE_PYTHON=	distutils
 USE_GNOME=	pygtk2
 
