--- a/x11/station-tweak/Makefile
+++ b/x11/station-tweak/Makefile
@@ -4,7 +4,7 @@
 
 PORTNAME=	station-tweak
 PORTVERSION=	0.3
-PORTREVISION=	0
+PORTREVISION=	1
 CATEGORIES=	x11
 MASTER_SITES=	https://github.com/GhostBSD/${PORTNAME}/archive/
 
@@ -18,10 +18,13 @@ GH_ACCOUNT=	GhostBSD
 
 BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}python-distutils-extra>=2.15:devel/py-python-distutils-extra
 
-RUN_DEPENDS=	wmctrl:x11/wmctrl
+RUN_DEPENDS=	wmctrl:x11/wmctrl \
+		plank:x11-wm/plank \
+		${PREFIX}/libexec/brisk-menu:x11/brisk-menu
 
-USES = python:2.7 gettext-tools
+USES=		python:2.7 gettext-tools
 USE_PYTHON=	distutils
-USE_GNOME=	pygobject3 intltool
+USE_GNOME=	pygobject3 intltool dconf
+USE_MATE= 	panel
 
 .include <bsd.port.mk>
