Update Firefox, Firefox-ESR, nss, and ca-root-nss

--- a/security/nss/Makefile
+++ b/security/nss/Makefile
@@ -1,8 +1,8 @@
 # Created by: Maxim Sobolev <sobomax@FreeBSD.org>
-# $FreeBSD: head/security/nss/Makefile 519827 2019-12-11 18:57:48Z pkubaj $
+# $FreeBSD: head/security/nss/Makefile 523023 2020-01-14 15:26:43Z jbeich $
 
 PORTNAME=	nss
-PORTVERSION=	3.48
+PORTVERSION=	3.49.1
 PORTREVISION=	1
 CATEGORIES=	security
 MASTER_SITES=	MOZILLA/security/${PORTNAME}/releases/${DISTNAME:tu:C/[-.]/_/g}_RTM/src \
