--- a/www/firefox/Makefile
+++ b/www/firefox/Makefile
@@ -1,9 +1,9 @@
 # Created by: Alan Eldridge <alane@FreeBSD.org>
-# $FreeBSD: head/www/firefox/Makefile 524658 2020-01-30 20:00:06Z tobik $
+# $FreeBSD: head/www/firefox/Makefile 525108 2020-02-04 00:39:23Z jbeich $
 
 PORTNAME=	firefox
-DISTVERSION=	72.0.2
-PORTREVISION=	3
+DISTVERSION=	73.0
+PORTREVISION=	1
 PORTEPOCH=	1
 CATEGORIES=	www
 MASTER_SITES=	MOZILLA/${PORTNAME}/releases/${DISTVERSION}/source \
@@ -14,7 +14,7 @@ MAINTAINER=	gecko@FreeBSD.org
 COMMENT=	Web browser based on the browser portion of Mozilla
 
 BUILD_DEPENDS=	nspr>=4.24:devel/nspr \
-		nss>=3.48:security/nss \
+		nss>=3.49.2:security/nss \
 		icu>=64.1,1:devel/icu \
 		libevent>=2.1.8:devel/libevent \
 		harfbuzz>=2.6.4:print/harfbuzz \
