--- a/security/nss/Makefile
+++ b/security/nss/Makefile
@@ -3,6 +3,7 @@
 
 PORTNAME=	nss
 PORTVERSION=	3.51.1
+PORTREVISION=	1
 CATEGORIES=	security
 MASTER_SITES=	MOZILLA/security/${PORTNAME}/releases/${DISTNAME:tu:C/[-.]/_/g}_RTM/src
 
