--- a/mail/thunderbird/Makefile
+++ b/mail/thunderbird/Makefile
@@ -1,9 +1,9 @@
 # Created by: Joe Marcus Clarke <marcus@FreeBSD.org>
-# $FreeBSD: head/mail/thunderbird/Makefile 531040 2020-04-07 22:04:20Z cmt $
+# $FreeBSD: head/mail/thunderbird/Makefile 532707 2020-04-23 20:14:49Z jbeich $
 
 PORTNAME=	thunderbird
 DISTVERSION=	68.7.0
-PORTREVISION=	1
+PORTREVISION=	3
 CATEGORIES=	mail news net-im
 MASTER_SITES=	MOZILLA/${PORTNAME}/releases/${DISTVERSION}/source \
 		MOZILLA/${PORTNAME}/candidates/${DISTVERSION}-candidates/build1/source
