--- a/security/nss/Makefile
+++ b/security/nss/Makefile
@@ -1,9 +1,9 @@
 # Created by: Maxim Sobolev <sobomax@FreeBSD.org>
-# $FreeBSD: head/security/nss/Makefile 531151 2020-04-08 23:10:57Z jbeich $
+# $FreeBSD: head/security/nss/Makefile 531847 2020-04-16 14:05:43Z pkubaj $
 
 PORTNAME=	nss
 PORTVERSION=	3.51.1
-PORTREVISION=	1
+PORTREVISION=	2
 CATEGORIES=	security
 MASTER_SITES=	MOZILLA/security/${PORTNAME}/releases/${DISTNAME:tu:C/[-.]/_/g}_RTM/src
 
@@ -58,7 +58,7 @@ BINS=		${DIST}/${OPSYS}${OSREL}_DBG.OBJ
 .endif
 
 .if ${ARCH} == powerpc64
-USE_GCC=	yes
+USES+=		compiler:c++11-lang # -mcrypto -mvsx
 .else
 MAKE_ENV+=	NSS_DISABLE_ALTIVEC=1
 .endif
