--- a/www/node12/Makefile.ca
+++ b/www/node12/Makefile.ca
@@ -10,13 +10,16 @@ CERTDATA_PACYWORLD_TXT=	ca-pacyworld_root.txt
 
 SHEBANG_FILES+=	tools/mk-ca-bundle.pl
 
+USES+=		perl5
+USE_PERL5=	patch
+
 copy-pacyworld:
 	@${CP} ${DISTDIR}/${CERTDATA_PACYCOMCA_TXT} ${WRKDIR}
 	@${CP} ${DISTDIR}/${CERTDATA_PACYWORLD_TXT} ${WRKDIR}
 	
 merge-pacyworld: copy-pacyworld
 	@${CAT} ${WRKDIR}/${CERTDATA_PACYCOMCA_TXT} ${WRKDIR}/${CERTDATA_PACYWORLD_TXT} >> ${WRKSRC}/${CERTDATA_TXT_PATH}
-	${WRKSRC}/tools/mk-ca-bundle.pl -q
+	@${WRKSRC}/tools/mk-ca-bundle.pl -q
 
-pre-build: merge-pacyworld
+post-patch: merge-pacyworld
 
