Update Firefox, Firefox-ESR, Thunderbird, nss.

--- a/security/nss/Makefile
+++ b/security/nss/Makefile
@@ -1,8 +1,8 @@
 # Created by: Maxim Sobolev <sobomax@FreeBSD.org>
-# $FreeBSD: head/security/nss/Makefile 535336 2020-05-15 22:26:53Z pkubaj $
+# $FreeBSD: head/security/nss/Makefile 535999 2020-05-20 14:48:58Z jbeich $
 
 PORTNAME=	nss
-PORTVERSION=	3.52
+PORTVERSION=	3.52.1
 PORTREVISION=	1
 CATEGORIES=	security
 MASTER_SITES=	MOZILLA/security/${PORTNAME}/releases/${DISTNAME:tu:C/[-.]/_/g}_RTM/src
