--- a/mail/thunderbird/Makefile
+++ b/mail/thunderbird/Makefile
@@ -1,9 +1,9 @@
 # Created by: Joe Marcus Clarke <marcus@FreeBSD.org>
-# $FreeBSD: head/mail/thunderbird/Makefile 540952 2020-07-01 12:13:11Z cmt $
+# $FreeBSD: head/mail/thunderbird/Makefile 541232 2020-07-04 18:11:42Z zeising $
 
 PORTNAME=	thunderbird
 DISTVERSION=	68.10.0
-PORTREVISION=	1
+PORTREVISION=	2
 CATEGORIES=	mail news net-im
 MASTER_SITES=	MOZILLA/${PORTNAME}/releases/${DISTVERSION}/source \
 		MOZILLA/${PORTNAME}/candidates/${DISTVERSION}-candidates/build1/source
