Update Firefox, Firefox-ESR, Thunderbird, node, node10, node12

--- a/www/firefox-esr/Makefile
+++ b/www/firefox-esr/Makefile
@@ -1,9 +1,9 @@
 # Created by: Alan Eldridge <alane@FreeBSD.org>
-# $FreeBSD: head/www/firefox-esr/Makefile 542677 2020-07-21 00:40:44Z jbeich $
+# $FreeBSD: head/www/firefox-esr/Makefile 544073 2020-08-03 15:18:49Z tobik $
 
 PORTNAME=	firefox
 DISTVERSION=	68.11.0
-PORTREVISION=	1
+PORTREVISION=	3
 PORTEPOCH=	1
 CATEGORIES=	www
 MASTER_SITES=	MOZILLA/${PORTNAME}/releases/${DISTVERSION}esr/source \
