--- a/mail/thunderbird/Makefile
+++ b/mail/thunderbird/Makefile
@@ -1,9 +1,9 @@
 # Created by: Joe Marcus Clarke <marcus@FreeBSD.org>
-# $FreeBSD: head/mail/thunderbird/Makefile 542931 2020-07-23 12:57:18Z cmt $
+# $FreeBSD: head/mail/thunderbird/Makefile 544073 2020-08-03 15:18:49Z tobik $
 
 PORTNAME=	thunderbird
 DISTVERSION=	68.11.0
-PORTREVISION=	1
+PORTREVISION=	3
 CATEGORIES=	mail news net-im
 MASTER_SITES=	MOZILLA/${PORTNAME}/releases/${DISTVERSION}/source \
 		MOZILLA/${PORTNAME}/candidates/${DISTVERSION}-candidates/build1/source
