--- a/www/firefox/Makefile
+++ b/www/firefox/Makefile
@@ -1,13 +1,13 @@
 # Created by: Alan Eldridge <alane@FreeBSD.org>
-# $FreeBSD: head/www/firefox/Makefile 547071 2020-08-30 18:36:07Z tobik $
+# $FreeBSD: head/www/firefox/Makefile 547221 2020-09-01 00:53:00Z jbeich $
 
 PORTNAME=	firefox
-DISTVERSION=	80.0
-PORTREVISION=	6
+DISTVERSION=	80.0.1
+PORTREVISION=	1
 PORTEPOCH=	1
 CATEGORIES=	www
 MASTER_SITES=	MOZILLA/${PORTNAME}/releases/${DISTVERSION}/source \
-		MOZILLA/${PORTNAME}/candidates/${DISTVERSION}-candidates/build2/source
+		MOZILLA/${PORTNAME}/candidates/${DISTVERSION}-candidates/build1/source
 DISTFILES=	${DISTNAME}.source${EXTRACT_SUFX}
 
 MAINTAINER=	gecko@FreeBSD.org
