Update Firefox, Firefox ESR, Thunderbird

--- a/www/firefox/Makefile
+++ b/www/firefox/Makefile
@@ -1,9 +1,9 @@
 # Created by: Alan Eldridge <alane@FreeBSD.org>
-# $FreeBSD: head/www/firefox/Makefile 550753 2020-09-30 21:42:29Z cmt $
+# $FreeBSD: head/www/firefox/Makefile 551843 2020-10-10 00:25:54Z jbeich $
 
 PORTNAME=	firefox
 DISTVERSION=	81.0.1
-PORTREVISION=	1
+PORTREVISION=	3
 PORTEPOCH=	2
 CATEGORIES=	www
 MASTER_SITES=	MOZILLA/${PORTNAME}/releases/${DISTVERSION}/source \
