--- a/security/nss/Makefile
+++ b/security/nss/Makefile
@@ -1,9 +1,9 @@
 # Created by: Maxim Sobolev <sobomax@FreeBSD.org>
-# $FreeBSD: head/security/nss/Makefile 550347 2020-09-27 20:38:43Z linimon $
+# $FreeBSD: head/security/nss/Makefile 552239 2020-10-13 12:40:42Z pkubaj $
 
 PORTNAME=	nss
 PORTVERSION=	3.57
-PORTREVISION=	1
+PORTREVISION=	2
 CATEGORIES=	security
 MASTER_SITES=	MOZILLA/security/${PORTNAME}/releases/${DISTNAME:tu:C/[-.]/_/g}_RTM/src
 
@@ -48,7 +48,6 @@ INSTALL_BINS=	certutil cmsutil crlutil derdump makepqg \
 OPTIONS_DEFINE=	DEBUG
 OPTIONS_DEFINE_powerpc=		VSX
 OPTIONS_DEFINE_powerpc64=	VSX
-OPTIONS_DEFINE_powerpc64le=	VSX
 
 VSX_CFLAGS=	-DUSE_PPC_CRYPTO
 VSX_DESC=	Use VSX optimized routines (POWER8 or newer)
@@ -62,7 +61,7 @@ BINS=		${DIST}/${OPSYS}${OSREL}_OPT.OBJ
 BINS=		${DIST}/${OPSYS}${OSREL}_DBG.OBJ
 .endif
 
-.if ${ARCH:Mpowerpc64*} || ${ARCH} == powerpc
+.if ${ARCH} == powerpc64 || ${ARCH} == powerpc
 EXTRA_PATCHES=	${FILESDIR}/${ARCH}${PPC_ABI:tl}-lib_freebl_scripts_gen.sh
 USES+=		compiler:c++11-lang # -mcrypto -mvsx
 .if ! ${PORT_OPTIONS:MVSX}
